// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchInput Component SwitchInput renders highlighted 1`] = `
<div>
  <div
    class="field gds-switch-container"
  >
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_0"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="silver"
        />
      </div>
      Switch label 0
    </label>
    <label
      class="input-switch-field-read-only input-switch-field-checked"
      data-testid="KEY_1"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          checked=""
          readonly=""
          type="checkbox"
        />
        <span
          class="silver"
        />
      </div>
      Switch label 1
    </label>
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_2"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="silver"
        />
      </div>
      Switch label 2
    </label>
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_3"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="silver"
        />
      </div>
      Switch label 3
    </label>
    <label
      class="input-switch-field-read-only field-highlighted"
      data-testid="KEY_4"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="silver"
        />
      </div>
      Switch label 4
    </label>
    <label
      class="input-switch-field-read-only"
      data-testid="KEY_5"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="silver"
        />
      </div>
      Switch label 5
    </label>
  </div>
</div>
`;

exports[`SwitchInput Component SwitchInput renders with input 1`] = `
<div>
  <div
    class="field gds-switch-container"
  >
    <label
      class=""
      data-testid="KEY_0"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="pebble"
        />
      </div>
      Switch label 0
    </label>
    <label
      class="input-switch-field-checked"
      data-testid="KEY_1"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          checked=""
          readonly=""
          type="checkbox"
        />
        <span
          class="primary"
        />
      </div>
      Switch label 1
    </label>
    <label
      class=""
      data-testid="KEY_2"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="pebble"
        />
      </div>
      Switch label 2
    </label>
    <label
      class=""
      data-testid="KEY_3"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="pebble"
        />
      </div>
      Switch label 3
    </label>
    <label
      class=""
      data-testid="KEY_4"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="pebble"
        />
      </div>
      Switch label 4
    </label>
    <label
      class=""
      data-testid="KEY_5"
      tabindex="0"
    >
      <div
        class="switch-marker"
      >
        <input
          readonly=""
          type="checkbox"
        />
        <span
          class="pebble"
        />
      </div>
      Switch label 5
    </label>
  </div>
</div>
`;

exports[`SwitchInput Component SwitchInput renders with no options 1`] = `
<div>
  <div
    class="field gds-switch-container"
  />
</div>
`;
